# LRCloud

./: CMakeLists.txt  README.md
src/: main.m
src/lua/lrcloud.lrdevplugin/: Info.lua  InfoProvider.lua  InitPlugin.lua  Logger.lua  LrUtils.lua  PluginInit.lua  RemoveDownload.lua  StartDownload.lua  TranslatedStrings_de.txt  TranslatedStrings_en.txt  TranslatedStrings_es.txt  TranslatedStrings_fr.txt  TranslatedStrings_it.txt  TranslatedStrings_no.txt  TranslatedStrings_sv.txt  isLocalAvailable.sh
src/objc/: main.m
